--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "@types/node": "^16.18.105",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "chart.js": "^4.4.3",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "uuid": "^10.0.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10"
   }
